@@ -719,6 +719,21 @@ module PageObject
     end
 
     #
+    # Finds all h6 elements matching the identifier
+    #
+    # @param [Hash] identifier how we find a H6.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def h6_elements(identifier)
+      platform.h6s_for(identifier.clone)
+    end
+
+    #
     # Finds a paragraph
     #
     # @param [Hash] identifier how we find a paragraph.  You can use a multiple paramaters
