@@ -281,6 +281,12 @@ describe PageObject::ElementLocators do
       element.should be_instance_of PageObject::Elements::Heading
     end
 
+    it "should find all h6 elements" do
+      watir_browser.should_receive(:h6s).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.h6_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Heading 
+    end
+
     it "should find a paragraph element" do
       watir_browser.should_receive(:p).with(:id => 'blah').and_return(watir_browser)
       element = watir_page_object.paragraph_element(:id => 'blah')
@@ -567,6 +573,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.h6_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::Heading
+    end
+
+    it "should find all h6 elements" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      elements = selenium_page_object.h6_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Heading 
     end
 
     it "should find a paragraph element" do
